--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,9 +1,9 @@
 
  .fondo {
-     height: 100vh;
     background: url('https://wallpaperplay.com/walls/full/d/1/c/128193.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 
 }
 
@@ -50,5 +50,27 @@
 }
 
 .logincss{
-   padding: 200px; 
+   padding: 140px; 
 }
+
+
+.column{
+    margin-left: 0%;
+
+}
+
+
+.card {
+    width: 300px;
+    height: 300px;
+    margin-left: 50px;
+    margin-top: 100px;
+}
+
+.card img{
+   
+    margin-top: 10px;
+    width: 150px;
+}
+
+
