--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,9 +1,9 @@
 
  .fondo {
+    height: 100vh;
     background: url('https://wallpaperplay.com/walls/full/d/1/c/128193.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
 
 }
 
@@ -50,8 +50,9 @@
 }
 
 .logincss{
-   padding: 140px; 
+   padding: 150px; 
 }
+
 
 
 .column{
@@ -61,16 +62,16 @@
 
 
 .card {
-    width: 300px;
-    height: 300px;
+    width: 250px;
+    height: 250px;
     margin-left: 50px;
-    margin-top: 100px;
+    margin-top: 80px;
 }
 
 .card img{
    
     margin-top: 10px;
     width: 150px;
+    height: 180px;
 }
-
 
