--- a/css/estilos.css
+++ b/css/estilos.css
@@ -101,3 +101,60 @@
     font-size: 25px;
 }
 
+.profile-header {
+    transform: translateY(5rem);
+}
+
+
+.titulo-agregar{
+   color:white;
+}
+
+.update-foto{
+    color:red;
+}
+
+.boton-add{
+    margin-left: 30px;
+    margin-top: 10px;
+}
+
+.card_product-add img{
+   
+    margin-top: 10px;
+    width: 300px;
+    height: 300px;
+}
+
+.card_product-add{
+    margin-top: 40px;
+    background-color: rgba(50,150,40,0.3);
+    color:white;
+    font-family: arial;
+    box-shadow: 0px 0px 3px #C1FF98;
+    margin-bottom: 30px;
+
+}
+
+.Productos{
+    background-color: rgba(0,0,0,0.3);
+    font-family: arial;
+}
+
+.Info-Product{
+    margin-top: 30px;
+}
+
+.checkbox {
+    margin-top: -20px;
+    background-color: rgba(0,0,0,0.3);
+    margin-bottom:10px;
+    margin-left: 30px;
+    margin-right: 30px;
+    color:white;
+}
+
+.class-product{
+    color:white;
+}
+
