--- a/css/estilos.css
+++ b/css/estilos.css
@@ -128,7 +128,7 @@
 }
 
 .card_product-add{
-    margin-top: 40px;
+    margin-top: -20px;
     background-color: rgba(50,150,40,0.3);
     color:white;
     font-family: arial;
@@ -143,11 +143,14 @@
 }
 
 .Info-Product{
-    margin-top: 20px;
+    margin-top: 10px;
+}
+.Info-Product-Sup{
+    margin-top: -30px;
 }
 
 .checkbox {
-    margin-top: -20px;
+    margin-top: 10px;
     background-color: rgba(0,0,0,0.3);
     margin-bottom:10px;
     margin-left: 30px;
@@ -156,7 +159,21 @@
 }
 
 .class-product{
-    margin-top: -5px;
+    margin-top: 0px;
     color:white;
 }
 
+.checkbox2 {
+    margin-top: -20px;
+    background-color: rgba(0,0,0,0.3);
+    margin-bottom:10px;
+    margin-left: 30px;
+    margin-right: 30px;
+    color:white;
+}
+
+
+.Gracias{
+    margin-right: 130px;
+    margin-top: 30px;
+}
